feat: Add localized enum type, and convert stereoscopic mode select box to use locallized profile names.